Closed Bug 1322717 Opened 8 years ago Closed 7 years ago

Crash in PLDHashTable::Search | mozilla::dom::DOMIntersectionObserver::UnlinkTarget

Categories

(Core :: DOM: Core & HTML, defect)

Unspecified
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 --- fixed

People

(Reporter: RyanVM, Assigned: tschneider)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1317415 +++

Spun off bug 1317415 for cleaner tracking of the new fix.
Assignee: nobody → tschneider
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/cfc91cb39848
Disconnect/Unlink in the proper order to avoid crashes in mozilla::dom::DOMIntersectionObserver::UnlinkTarget. r=mrbkap
Keywords: checkin-needed
Blocks: 1321865
Thanks, RyanVM!
https://hg.mozilla.org/mozilla-central/rev/cfc91cb39848
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Added the original patch to make clear what actually landed here.
I'm still getting this type of crash on Nightly and even on inbound.  Running Windows 10 64 bit. Here's the crash report:

https://crash-stats.mozilla.com/report/index/8f4cde8b-12e0-4a3a-9ad1-e82292170122
There's a new bug filed for that: bug 1332939.
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: